# transactionfee-info

./: .gitignore  LICENSE  README.md  shell.nix
.github/workflows/: hugo.yaml  rust.yml
backend/: Cargo.toml
backend/migrations/2023-08-27-000000_create_block_stats/: down.sql  up.sql
backend/migrations/2025-02-02-181529_add_p2a/: down.sql  up.sql
backend/migrations/2025-02-06-000000_add-miningpool-ids/: down.sql  up.sql
backend/migrations/2025-03-15-160437_ephemeral_dust/: down.sql  up.sql
backend/migrations/2025-04-03-000000_add-more-opreturn-stats/: down.sql  up.sql
backend/migrations/2025-04-04-000000_mining-difficulty/: down.sql  up.sql
backend/migrations/2025-04-06-000000_block-count/: down.sql  up.sql
backend/src/: db.rs  gen_csv.rs  lib.rs  main.rs  rest.rs  schema.rs  stats.rs
backend/testdata/: 361582.json  739990.json
backend/tests/: minimal.rs
frontend/: config.toml  del-chart.sh  new-chart.sh
frontend/archetypes/: categories.md  charts.md
frontend/content/: _index.md  missing-chart.html
frontend/content/charts/: _index.md  bitcoin-script-ECDSA-S-Value.md  bitcoin-script-ECDSA-length.md  bitcoin-script-ECDSA-r,S-values.md  bitcoin-script-ECDSA-r-Value.md  bitcoin-script-ECDSA-strict-DER.md  bitcoin-script-pubkey-compression.md  bitcoin-script-sighash-all.md  bitcoin-script-sighash-anyonecanpay-all.md  bitcoin-script-sighash-anyonecanpay-none.md  bitcoin-script-sighash-anyonecanpay-single.md  bitcoin-script-sighash-none.md  bitcoin-script-sighash-single.md  bitcoin-script-total-signature-size.md  block-coinbase-amount.md  block-size.md  block-weight.md  blocks-per-day.md  fees-package-feerates.md  fees-per-day-btc.md  fees-per-day-usd.md  inputs-and-outputs-native-segwit-v0.md  inputs-and-outputs-p2a.md  inputs-and-outputs-p2ms.md  inputs-and-outputs-p2pk.md  inputs-and-outputs-p2pkh.md  inputs-and-outputs-p2sh.md  inputs-and-outputs-p2tr.md  inputs-and-outputs-p2wpkhv0.md  inputs-and-outputs-p2wshv0.md  (+79 more)
frontend/layouts/: index.html
(+136 files in other folders)
