[package]
name = "transactionfee-info-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.188"
diesel = { version = "= 2.1", features = ["sqlite", "64-column-tables"] }
diesel_migrations = "2.1"
tokio = { version = "= 1.32.0", features = ["rt", "rt-multi-thread", "macros", "sync"] }
chrono = "0.4.26"
rawtx-rs = "0.1.11"
rayon = "1.7.0"
minreq = { version = "2.12.0", features = ["json-using-serde"] }
log = "0.4.22"
env_logger = "0.11.3"
